# ai-studio

./: .gitignore  AI_Studio_PRD.md  Builders_Toolkit_Delegation_Plan.md  CLAUDE.md  README.md  description_chain.md  pyproject.toml
docs/acceptance_tests/: post_processing_engine.md  script_engine.md  video_analyzer.md
services/post-processing-engine/: README.md  pyproject.toml
services/post-processing-engine/remotion/: package.json
services/post-processing-engine/src/post_processing_engine/: app.py
services/script-engine/: README.md  pyproject.toml
services/script-engine/src/script_engine/: app.py  duration.py  generation.py  prompt.py  schemas.py
services/script-engine/tests/: test_duration.py  test_generation.py  test_schema.py
services/video-analyzer/: README.md  pyproject.toml
services/video-analyzer/src/video_analyzer/: app.py
shared/schemas/: pyproject.toml
shared/schemas/src/ai_studio_schemas/: __init__.py  profiles.py  script.py
