[project]
name = "script-engine"
version = "0.0.1"
description = "AI Studio - Script Engine (Writer). Serverless-shaped. See ../../AI_Studio_PRD.md Section 4."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "ai-studio-schemas",
    "langchain==1.3.14",
    "langchain-anthropic==1.5.0",
    "anthropic==0.117.1",
    "python-dotenv==1.2.2",
]

[tool.uv.sources]
ai-studio-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/script_engine"]

[tool.pytest.ini_options]
markers = [
    "integration: hits the real Anthropic API and costs money",
]
