[project]
name = "video-analyzer"
version = "0.0.1"
description = "AI Studio - Video Analyzer. Serverless-shaped. No user-facing name (backend only). See ../../AI_Studio_PRD.md 'Video Analyzer' section."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "ai-studio-schemas",
]

[tool.uv.sources]
ai-studio-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_analyzer"]
