[project]
name = "ai-studio-schemas"
version = "0.0.1"
description = "Canonical Pydantic models shared across Script Engine, Video Analyzer, and Post-Processing Engine. No model code yet - Week 5 Day 1 scaffold only."
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_studio_schemas"]
